2008-04-10  Miloslav Trmač  <mitr@redhat.com>

	* configure.in: Version 1.96.1.
	* NEWS: Update.

2008-03-23  Miloslav Trmač  <mitr@redhat.com>

	* po/hu.po: Updated Hungarian translation by Lónyai Gergely
	<aleph@mandriva.org>.

2008-02-29  Miloslav Trmač  <mitr@redhat.com>

	* configure.in: Version 1.96.
	* NEWS: Update.

	* userhelper.c (selinux_enabled, get_init_context, setup_selinux_exec)
	(setup_selinux_root_exec, setup_selinux_user_exec): Remove.
	(wrap): Don't override SELinux contexts of created processes.
	(main): Inline the is_selinux_enabled() call now that selinux_enabled
	is not used anywhere else.

2008-02-25  Miloslav Trmač  <mitr@redhat.com>

	* configure.in: Version 1.95.
	* NEWS: Update.

	* userhelper.c (wrap): Fix returning the exit code of the child process
	if (session).

	* README: Add some content.

	* userinfo.desktop.in (Icon)
	* usermount.desktop.in (Icon)
	* userpasswd.desktop.in (Icon): Remove extension from the icon name
	to allow non-PNG themes.

	* userinfo.desktop.in (Encoding)
	* usermount.desktop.in (Encoding)
	* userpasswd.desktop.in (Encoding): Remove (the item is obsolete).

2008-02-24  Miloslav Trmač  <mitr@redhat.com>

	* userinfo.desktop.in (Categories): Add missing trailing semicolon.

	* po/POTFILES.in: Add gsmclient.c.  Sort alphabetically.

	* Makefile.am (HGTAG): Replace CVSTAG.
	(tag, forcetag, archive): Update to use Mercurial.

2008-01-10  Miloslav Trmač  <mitr@redhat.com>

	* configure.in: Release 1.94.
	* NEWS: Update.

	* po/sr@latin.po: Rename from po/sr@Latn.po.
	* po/LINGUAS: Update.

	* userhelper.8.in: Beautify.

	* shvar.c (relative_to, svInclude): New functions.
	(svOpenFile): Add support for including other files.
	Original patch by Carlo de Wolf <cdewolf@redhat.com>.
	* userhelper.8.in: Document wrapper configuration file format.

2007-10-16  Miloslav Trmač  <mitr@redhat.com>

	* configure.in: Release 1.93.1.
	* NEWS: Update.

	* po/no.po: Remove (obsoleted by po/nb.po).
	* po/LINGUAS: Remove "no".
